# 3_20_research

./: agents_as_tools.py  pyproject.toml  readme.md  requirements.txt  splits_pubmedqa_1000.json  splits_pubmedqa_500.json
tool_sft_pubmedqa_1000/: tool_context_dev.jsonl  tool_reasoning_dev.jsonl
tool_sft_pubmedqa_500/: tool_context_dev.jsonl  tool_context_train.jsonl  tool_reasoning_dev.jsonl  tool_reasoning_train.jsonl
